# zmq-build-cmake

./: CMakeLists.txt  options.cmake
czmq/: CMakeLists.txt  header_configuration.cmake  platform.h.in
libzmq/: CMakeLists.txt
majordomo/: CMakeLists.txt
